Scale scrollbar width in popup properly

Implement missing windowToViewportScalar on PagePopupChromeClient

BUG=673109
TEST=popup-menu-with-scrollbar-appearance.html

Review-Url: https://codereview.chromium.org/2568353003
Cr-Commit-Position: refs/heads/master@{#438381}