third_party/WebKit/Source/web/WebPagePopupImpl.cpp
@@ -56,6 +56,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "platform/tracing/TraceEvent.h"
 #include "public/platform/WebCompositeAndReadbackAsyncCallback.h"
 #include "public/platform/WebCursorInfo.h"
+#include "public/platform/WebFloatRect.h"
 #include "public/web/WebAXObject.h"
 #include "public/web/WebFrameClient.h"
 #include "public/web/WebViewClient.h"
@@ -95,6 +96,12 @@ class PagePopupChromeClient final : public EmptyChromeClient {
     rectInScreen.x += windowRect.x;
     rectInScreen.y += windowRect.y;
     return rectInScreen;
+  }
+
+  float windowToViewportScalar(const float scalarValue) const override {
+    WebFloatRect viewportRect(0, 0, scalarValue, 0);
+    m_popup->widgetClient()->convertWindowToViewport(&viewportRect);
+    return viewportRect.width;
   }
 
   void addMessageToConsole(LocalFrame*,
